--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,22 @@
 body {
   margin: 0;
+  width: 100%;
 }
 
 .App {
-  width: 100%;
-  height: 100vh;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 1rem;
-  font-size: 2em;
+  font-size: 1.5em;
   font-family: sans-serif;
+  border: 2px solid black;
+  border-radius: 13px;
+  padding: 2%;
 }
